# codewars

./: .gitignore  Codewars style ranking system.py  Consecutive Strings.py  Create Phone Number.py  Delete occurrences of an element if it occurs more than n times.py  Descending order.py  Find the Unique Number.py  First variation on ceasar cipher.py  Format a string of names like 'Bart, Lisa & Maggie.py  Persistent Bugger.py  README.md  Simple Fun #358: Vertical Histogram Of Letters.py  Solutions- A Chain adding function - Codewars.url  The Hunger Games - Zoo Disaster!.py  Valid Parentheses.py  Vector Class.py  car park escape.py  go.mod  noobCode1.py  parseInt() reloaded.py  pyproject.toml
4kyu/: repetitive sequence - easy version.py
4kyu/codewars-style-ranking-system/: README.md
4kyu/explosive-sum/: README.md  old_solution.py
4kyu/parseint-reloaded/: README.md
5kyu/: A Chain adding function.py  Can you get the loop.py  Greed is Good.py  Integers - Recreation One.py  Matching And Substituting.py  Moving Zeros To The End.py  My Very Own Pythons Split Function.py  Numbers that are a power of their sum of digits.py  Play with two Strings.py  Scraping- Codewars top 500 users.py  Simple Fun #358: Vertical Histogram Of Letters.py  Sort - one, three, two.py
6kyu/: Array.diff.py  Create Phone Number.py  Detect Pangram.py  IQ Test.py  Replace With Alphabet Position.py  Simple Encryption #1 - Alternating Split.py  Who likes it?.py  Write Number in Expanded Form.py  vowels back.py
8kyu/: noobCode1.py
codewars/: Solutions- A Chain adding function - Codewars.url
(+148 files in other folders)
