[tool.poetry]
name = "codewars"
version = "0.1.0"
description = "Solutions for Codewars katas"
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
